# cwru_davinci_skills_and_demo

./: CMakeLists.txt  README.md  package.xml
action/: CwruDavinciSkillControl.action
include/cwru_davinci_skills_and_demo/: DavinciSkillBase.h  DavinciSkillsAuxiliary.h  DavinciSkillsCommunicationsActionClient.h  DavinciSkillsCommunicationsManager.h  cwru_davinci_skills_communications_node.h  davinci_skills_management_base.h
src/: DavinciSkillBase.cpp  DavinciSkillsAuxiliary.cpp  DavinciSkillsCommunicationsActionClient.cpp  DavinciSkillsCommunicationsManager.cpp  action_client_test_node.cpp  cwru_davinci_skills_communications_node.cpp
test/: controller_test_main.cpp  dynamic_trajectory_switch_main.cpp
